@@ -3,6 +3,10 @@
     * Add a preference menuitem to choose default pane.
     * Re-enable Oracle repository.
 
+2010-05-29 MA Yue <velly.empire@gmail.com>
+
+    * Reset GNOME
+
 2010-05-29 QI Chengjie <starboy.qi@gmail.com>
 
     * Add some eclipse extensions for Fedora
